--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <head>
   <title>HMC Helper Application</title>
 </head>
+<body>
+  <iframe src="https://forms.gle/fNspHzkXEghUNewH7"></iframe>
+</body>
