--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <title>HMC Helper Application</title>
 </head>
 <body>
-  <iframe src="https://forms.gle/fNspHzkXEghUNewH7"></iframe>
+  <iframe src="https://forms.gle/fNspHzkXEghUNewH7">
 </body>
