--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <title>HMC Helper Application</title>
 </head>
 <body>
-  <iframe src="https://forms.gle/fNspHzkXEghUNewH7" height="96%" width="100%" frameborder="0"></iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeLs5Wck0M2_S3I-ZLyYhAu0zYOZKXESCx05cVWo6Olw_jhRw/viewform?embedded=true" width="100%" height="96%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
